# Thermal-FIST

./: .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakeLists.txt.in  README.md  ThermalFISTConfig.h.in  build_wasm.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build.yml1  build_and_test.yml  cmake.yml  tests.yml  tests.yml1
deploy/wasm/: .dockerignore  Caddyfile  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  update_docker.sh
docs/: quickstart.md  wasm-build.md
docs/doxygen/: Doxyfile  Doxyfile.bak  DoxygenLayout.xml  main.dox
docs/notes/: .gitignore
docs/notes/FermiIntegralIBP/: FermiIntegralIBP.tex
include/: HRGBase.h  HRGEV.h  HRGEventGenerator.h  HRGFit.h  HRGPCE.h  HRGRealGas.h  HRGVDW.h
include/CosmicEos/: CosmicEoS.h  EffectiveMassModel.h
include/HRGBase/: BilinearSplineFunction.h  Broyden.h  ExtraParticles.h  IdealGasFunctions.h  NumericalIntegration.h  ParticleDecay.h  SplineFunction.h  Susceptibilities.h  ThermalModelBase.h  ThermalModelCanonical.h  ThermalModelCanonicalCharm.h  ThermalModelCanonicalStrangeness.h  ThermalModelIdeal.h  ThermalModelParameters.h  ThermalParticle.h  ThermalParticleSystem.h  Utility.h  xMath.h  xMath.tcc
include/HRGEV/: ExcludedVolumeHelper.h  ExcludedVolumeModel.h  ThermalModelEVCanonicalStrangeness.h  ThermalModelEVCrossterms.h  ThermalModelEVCrosstermsLegacy.h  ThermalModelEVDiagonal.h
include/HRGEventGenerator/: Acceptance.h  CracowFreezeoutEventGenerator.h  CylindricalBlastWaveEventGenerator.h  EventGeneratorBase.h  EventWriter.h  FreezeoutModels.h  HepMCEventWriter.h  HypersurfaceSampler.h  MomentumDistribution.h  ParticleDecays.h  ParticleDecaysMC.h  RandomGenerators.h  SREventGenerator.h  SSHEventGenerator.h  SimpleEvent.h  SimpleParticle.h  SphericalBlastWaveEventGenerator.h
include/HRGFit/: ThermalModelFit.h  ThermalModelFitParameters.h  ThermalModelFitQuantities.h
include/HRGPCE/: ThermalModelPCE.h  ThermalModelPCEAnnihilation.h
include/HRGRealGas/: ExcludedVolumeModels.h  ExcludedVolumeModelsMulti.h  MeanFieldModels.h  MeanFieldModelsMulti.h  ThermalModelRealGas.h
include/HRGVDW/: ThermalModelVDW.h  ThermalModelVDWCanonicalStrangeness.h  ThermalModelVDWFull.h
input/list/PDG2025/: README.md  generate_pdg2025.py
input/list/PDG2025_codex/: .gitignore  README.md
src/examples/: CMakeLists.txt
src/examples/1512.08046.BagModel/: BagModel.cpp  CMakeLists.txt
src/examples/BagModelFit/: BagModelFit.cpp  CMakeLists.txt
src/examples/Cosmology/: CMakeLists.txt  CosmicTrajectory.cpp  TestEMMDerivatives.cpp
src/examples/EoS/: CMakeLists.txt  SusceptibilitiesBQS.cpp  ThermodynamicsBQS.cpp  ZeroTemperatureComparison.cpp  ZeroTemperatureQvdW.cpp
src/examples/NeutronStars/: CMakeLists.txt  NeutronStars-CSHRG.cpp
src/examples/PCE/: CMakeLists.txt  PCE-Saha-LHC.cpp
src/examples/cpc/: CMakeLists.txt  cpc1-HRG-TDep.cpp  cpc2-chi2-vs-T.cpp  cpc3-chi2NEQ.cpp  cpc4-mcHRG-TDep.cpp  cpc4-mcHRG.cpp
src/gui/QtHRG/: BaseStructures.h  CMakeLists.txt  NumberStatistics.cpp  NumberStatistics.h  chi2ProfileDialog.cpp  chi2ProfileDialog.h  chi2dialog.cpp  chi2dialog.h  contourplottab.cpp  contourplottab.h  energydependencetab.cpp  energydependencetab.h  eventgeneratortab.cpp  eventgeneratortab.h  fittoexperimenttab.cpp  fittoexperimenttab.h  mainwindow.cpp  mainwindow.h  modeltab.cpp  modeltab.h  particledialog.cpp  particledialog.h  particlespectra.cpp  particlespectra.h  quantitydialog.cpp  quantitydialog.h  resultdialog.cpp  resultdialog.h  tablemodel.cpp  tablemodel.h
src/gui/QtThermalFIST/: BaseStructures.cpp  BaseStructures.h  CMakeLists.txt  CosmicEoStab.cpp  CosmicEoStab.h  DebugText.cpp  DebugText.h  HelperRoutines.cpp  HelperRoutines.h  ItemDelegateCustom.h  NumberStatistics.cpp  NumberStatistics.h  SpectralFunctionDialog.cpp  SpectralFunctionDialog.h  WasmFileIO.h  aboutdialog.cpp  aboutdialog.h  calculationtabledialog.cpp  calculationtabledialog.h  chi2ProfileDialog.cpp  chi2ProfileDialog.h  chi2dialog.cpp  chi2dialog.h  configinteractions.cpp  configinteractions.h  configwidgets.cpp  configwidgets.h  contourplottab.cpp  contourplottab.h  correlationsdialog.cpp  correlationsdialog.h  decayseditor.cpp  decayseditor.h  decaytablemodel.cpp  decaytablemodel.h  energydependencetab.cpp  energydependencetab.h  equationofstatetab.cpp  equationofstatetab.h  eventgeneratortab.cpp  (+36 more)
src/libraries/: CMakeLists.txt
src/libraries/HRGBase/: Broyden.cpp  IdealGasFunctions.cpp  NumericalIntegration.cpp  ThermalModelBase.cpp  ThermalModelCanonical.cpp  ThermalModelCanonicalCharm.cpp  ThermalModelCanonicalStrangeness.cpp  ThermalModelIdeal.cpp  ThermalParticle.cpp  ThermalParticleSystem.cpp  xMath.cpp
src/libraries/HRGEV/: ExcludedVolumeHelper.cpp  ThermalModelEVCanonicalStrangeness.cpp  ThermalModelEVCrossterms.cpp  ThermalModelEVDiagonal.cpp
src/libraries/HRGEventGenerator/: Acceptance.cpp  CylindricalBlastWaveEventGenerator.cpp  EventGeneratorBase.cpp  MomentumDistribution.cpp  ParticleDecays.cpp  ParticleDecaysMC.cpp  RandomGenerators.cpp  SREventGenerator.cpp  SSHEventGenerator.cpp  SimpleEvent.cpp  SphericalBlastWaveEventGenerator.cpp
src/libraries/HRGFit/: ThermalModelFit.cpp
src/libraries/HRGVDW/: ThermalModelVDW.cpp  ThermalModelVDWCanonicalStrangeness.cpp  ThermalModelVDWFull.cpp
src/nusteam/: CMakeLists.txt  NuSTEAM-HRG-EoS-completed.cpp  NuSTEAM-HRG-EoS.cpp  README.MD
src/routines/: CMakeLists.txt
src/routines/EVTablesGenerator/: CMakeLists.txt  EVTablesGenerator.cpp
test/: CMakeLists.txt  test_CompareOutputs.cpp  test_EMMDerivatives.cpp  test_IdealGasFunctions.cpp  test_ParticleListValidation.cpp  test_QvdWHRG.cpp  test_ZeroTemperature.cpp
test/ReferenceOutput/: BQS_paramrange_1.in  BQS_paramrange_2.in  cpc1.EV-HRG.TDep.out  cpc1.Id-HRG.TDep.out  cpc1.QvdW-HRG.TDep.out  cpc2.EV-HRG-BagModel.ALICE2_76.chi2.TDep.out  cpc2.EV-HRG-TwoComponent.ALICE2_76.chi2.TDep.out  cpc2.Id-HRG.ALICE2_76.chi2.TDep.out  cpc2.QvdW-HRG.ALICE2_76.chi2.TDep.out  cpc3.EQ.chi2.out  cpc3.NEQ.chi2.out
(+14 files in other folders)
